# safetensors

./: xpaienc.md
bindings/python/: Cargo.toml
bindings/python/py_src/safetensors/: __init__.py
bindings/python/src/: decryption.rs  lib.rs
safetensors/src/: slice.rs
