[package]
name = "safetensors-python"
version = "0.7.0-dev.0"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "safetensors_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["abi3", "abi3-py38"] }
memmap2 = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
aes = "0.8"
ctr = "0.9"
hex = "0.4"

[dependencies.safetensors]
path = "../../safetensors"
